create home task 13 for lesson 11

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <span class="projects_number"> 40+ </span> проектов  
                 </p>
             </div>
-        </div>
+        </div> <!--/.numbers-->
         <section class="my_work grey">
             <h2 class="heading"> 
                 Как я работаю 
